--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPD8X6l3ix1Gv9DT4Lg2LxF",
+      "authorship_tag": "ABX9TyNWoDXJ+2tn0AhDqU/xf8D2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -92,6 +92,20 @@
         "arr_random = np.random.rand(2,3)\n",
         "print(\"Random array if 2X3:\\n\",arr_random)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import skfuzzy as fuzz\n",
+        "from skfuzzy import control as ctrl\n"
+      ],
+      "metadata": {
+        "id": "ZPGujub397iO"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
